--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -6,10 +6,10 @@
   "commit": false,
   "contributors": [
     {
-      "login": "ashutosh1919",
-      "name": "Ashutosh Hathidara",
+      "login": "Fzmes",
+      "name": "Meskine Fatima Ezzahra",
       "avatar_url": "https://avatars3.githubusercontent.com/u/20843596?s=460&u=7f184b911f73ae1dc5765ab686fff2b2e984830f&v=4",
-      "profile": "http://ashutosh1919.github.io",
+      "profile": "http://Fzmes.github.io",
       "contributions": [
         "code",
         "doc",
@@ -367,8 +367,8 @@
     }
   ],
   "contributorsPerLine": 7,
-  "projectName": "masterPortfolio",
-  "projectOwner": "ashutosh1919",
+  "projectName": "masterPortfolio1",
+  "projectOwner": "Fzmes",
   "repoType": "github",
   "repoHost": "https://github.com",
   "skipCi": true,
